kubernetes/simple-pod-networking/yml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
  labels:
    application: simple
spec:
  selector:
    application: simple
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
