kubernetes/simple-pod-networking/yml/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
    - http:
        paths:
          - path: /simple
            backend:
              serviceName: simple-service
              servicePort: 8080
